# MyLoad-Real-Time-Visualization-of-Mental-Load-in-Hybrid-Workplaces

./: .gitignore  .pre-commit-config.yaml  Klassendiagramm.md  Lifecycle  Lifecycle.md  MyLoad.spec  Prototype_features.md  README.md  Readh5.py  TaskBacklog  biosignal_monitoring.py  dialog.py  dialog.ui  notes_django_qt.md  poetry.md  pyproject.toml
Applikations_Dokumentation/: Klassendiagramm
Documentation/: MyLoad_HighFidelityPrototyp.fig
Documentation/Evaluierung/: Evaluierung Auswertung.ods
Documentation/Interview_AnalysePhase1/: InterviewCoding.ods
Documentation/N-Backtests/: NBackTests_Auswertung.xlsx
Documentation/Präsentationen/: MyLoad_Midterm_Präsentation.pptx
Fragebogen_zur_Visualisierung/: FragebogenCodierung.ods
Mid&Endterm_Präsentation/: MyLoad_Endterm_Präsentation.pptx  MyLoad_Midterm_Präsentation.pptx
Phasenergebnisse/Analysephase I/: cognitive_load_papers_no_description.csv
app/: H5DataVisualizer.py  __main__.py
app/controller/: Controller2.py  PageDTO.py  controller.py  pagewrapper.py
app/model/: H5DataVisualizer.py  Recorder.py  __init__.py  calculateScore.py  constants.py  eegMonitoring.py  hdf5Util.py  nbacktest.py  recorder.py  settings.py  testLogic.py
app/setting_files/: user_settings.json
app/util/: __init__.py  callback.py  constants.py  logger.py
app/view/: baselinePage.py  constants.py  jitsiWidget.py  (+10 more)
css/: example.css
documentation/: Building_an_Executable.md  Klassendiagramm  Lifecycle  Prototype_features.md  TaskBacklog  poetry.md
references_and_loose_code_files/: CLScore.py  CLScore_updated.py  CL_Score.py  ICAWorker.py  Readh5.py  biosignal_monitoring.py  eegMonitoring.py  jitsi.html  test.py  test2.py
test_kerem/: test.py
(+46 files in other folders)
