[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["udvbk <udvbk@student.kit.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
numpy = "^2.2.2"
brainflow = "^5.16.0"
meegkit = "^0.1.7"
h5py = "^3.12.1"
python = ">=3.12,<3.14"
keyboard = "^0.13.5"
pyqt6 = "^6.8.0"
pyqtgraph = "^0.13.7"
pyqt6-webengine = "^6.8.0"
matplotlib = "^3.10.0"
pyriemann = "^0.2.7"
click = "^8.1.8"
mplcursors = "^0.6"
pyserial = "^3.5"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.12.0"
pre-commit = "^4.2.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
